# crabcode

./: .gitignore  AGENTS.md  AISDK_INTEGRATION_PLAN.md  CONNECT_FEATURE.md  Cargo.toml  FUZZY_SEARCH.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION_PLAN.md  OLD_PROMPTS.md  PERSISTENCE.md  PLAN.md  README.md  REFACTORING.md  SESSIONS_FEATURE.md  crabcode-logo.txt  justfile  persistence-progress.txt
.ralphy/: config.yaml  progress.txt
_plans/: ACTIVE_MODEL_SWITCHING.md  AGENTS_AND_CLAUDE_RULES_LOADING.md  CONNECT_FEATURE.md  FUZZY_SEARCH.md  OC_SYSTEMPROMPT_PRD.md  OC_TOOL_SYSTEM_PRD.md  POLISH_CHAT_EXPERIENCE.md  SESSIONS_FEATURE.md  STREAM_MARKDOWN.md  TOOL_SYSTEM_PLAN.md  WHICH_KEY_AND_SHORTCUTS.md  metrics-plan.md  wave_spinner_design.md
scripts/: gen-themes.ts
src/: app.rs  config.rs  logging.rs  main.rs  theme.json  theme.rs
src/agent/: build.rs  manager.rs  mod.rs  plan.rs  types.rs
src/autocomplete/: command.rs  file.rs  mod.rs
src/command/: handlers.rs  mod.rs  parser.rs  registry.rs
src/llm/: client.rs  mod.rs  provider.rs  tool_calls.rs
src/model/: discovery.rs  mod.rs  types.rs
src/model/providers/: common.rs  mod.rs  nano_gpt.rs  z_ai.rs
src/persistence/: auth.rs  conversions.rs  db.rs  history.rs  migrations.rs  mod.rs  prefs.rs  prompt_history.rs  providers.rs
src/prompt/: mod.rs  rules.rs
src/session/: manager.rs  types.rs
src/streaming/: client.rs  parser.rs
src/tools/: aisdk_bridge.rs  bash.rs  context.rs  edit.rs  init.rs  mod.rs  registry.rs  types.rs
src/tools/fs/: glob.rs  list.rs  mod.rs  read.rs  write.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: api_key_input.rs  chat.rs  dialog.rs  input.rs  landing.rs  mod.rs  popup.rs  status_bar.rs  wave_spinner.rs
src/ui/markdown/: streaming.rs
src/utils/: frecency.rs  git.rs  ignore.rs  mod.rs
src/views/: chat.rs  connect_dialog.rs  home.rs  mod.rs  models_dialog.rs  session_rename_dialog.rs  sessions_dialog.rs  suggestions_popup.rs  which_key.rs
