[package]
name = "crabcode"
version = "0.1.0"
edition = "2021"
description = "Rust AI CLI Coding Agent"
license = "MIT"
repository = "https://github.com/anomalyco/crabcode"

[dependencies]
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["ratatui"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
copypasta = "0.10"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
ratatui-toolkit = "0.1"
lazy_static = "1.5"
crossterm = "0.29.0"

[dev-dependencies]
tokio-test = "0.4"
