[package]
name = "crabcode"
version = "0.0.1"
edition = "2021"
description = "(WIP) Rust AI CLI Coding Agent with a beautiful terminal UI"
license = "MIT"
repository = "https://github.com/blankeos/crabcode"
readme = "README.md"
keywords = ["ai", "cli", "coding", "agent", "tui"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
authors = ["Carlo Taleon <carloantonioct@gmail.com>"]

[dependencies]
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["ratatui"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
copypasta = "0.10"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
ratatui-toolkit = "0.1"
lazy_static = "1.5"

[dev-dependencies]
tokio-test = "0.4"
